Added Pictures, colors, extra pages. Also added README

--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
   </head>
   <body>
     <div class="banner">
-      <h6>Main Accommodations Activities Travel Arrangements Pictures Contact</h6>
+      <h6>
+        <a href="index.html">Main</a>
+        <a href="accommodations.html">Accommodations</a>
+        <a href="activities.html">Activities</a>
+        <a href="travel-arrangenments.html">Travel-Arrangements</a>
+        <a href="contact-info.html">Contact</a>
+      </h6>
       <h1>Welcome To Your Getaway</h1>
       <h6>__________________________________________________________________</h6>
     </div>
@@ -19,7 +25,8 @@
     <div class="banner2">
       <h2>Experience your own slice of paradise on the tropical shores of Pretendistan!</h2>
     </div>
-
+      <p>Established in 1977, the Trump Super Resort Megaplex in Pretendistan exists to serve all of your desires, provided you aren't poor.</p>
+      <p>Feel free to explore the site via the navagation bar to view our plethora of wonderful accommodations, activites and more!</p>
 
   </body>
 </html>
